--- a/docs/spec.yaml
+++ b/docs/spec.yaml
@@ -836,7 +836,42 @@ paths:
           $ref: '#/components/responses/Unprocessable'
         500:
           $ref: '#/components/responses/ServerError' 
-            
+    delete:
+      tags:
+      - orders
+      summary: delete order by id
+      description: "**service available only for admin user**"
+      security:
+        - bearerAuth: []
+      parameters:
+      - name: order_id
+        in: path
+        description: order id
+        required: true
+        schema: 
+          type: integer
+      responses:
+        202:
+          description: Success
+          content: 
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 202
+                  message:
+                    type: string
+                    example: 'order removed'
+        401:
+          $ref: '#/components/responses/Unauthorized' 
+        403:
+          $ref: '#/components/responses/Forbidden'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'      
 components:
   responses:
     NotFound:
